# iaretis

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  compose.prod.yml  compose.yml  iaretis.mobileconfig.example  initial-plan.md
.github/workflows/: build-push.yml
src/: config.rs  doh.rs  filter.rs  forwarder.rs  handler.rs  main.rs  server.rs
