[package]
name = "iaretis"
version = "0.1.0"
edition = "2024"

[dependencies]
hickory-server = { version = "0.25", features = ["https-ring"] }
hickory-resolver = "0.25"
hickory-proto = "0.25"
anyhow = "1"
async-trait = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
