[package]
name = "iaretis"
version = "0.1.0"
edition = "2024"

[dependencies]
hickory-server = "0.26.0-beta.3"
hickory-resolver = { version = "0.26.0-beta.3", features = ["tls-ring"] }
hickory-proto = "0.26.0-beta.3"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
h2 = "0.4"
http = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
